[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/BossLevel.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/hero_health_bar.tres" type="Theme" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=7]
[ext_resource path="res://src/Level/BossFight.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.72549, 0, 0, 1 )

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="BossFight" parent="." instance=ExtResource( 8 )]
pause_mode = 1

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="InterfaceLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Icon" type="Sprite" parent="InterfaceLayer/Control"]
position = Vector2( 49.4999, 426.5 )
scale = Vector2( 0.433333, 0.433333 )
texture = ExtResource( 6 )

[node name="HealthBar" type="ProgressBar" parent="InterfaceLayer/Control"]
margin_left = 88.5
margin_top = 429.5
margin_right = 219.5
margin_bottom = 456.5
theme = ExtResource( 5 )
max_value = 5.0
step = 1.0
value = 3.0
rounded = true

[node name="BossHealthBar" type="Control" parent="InterfaceLayer"]
margin_left = -3.0
margin_top = 1.0
margin_right = 797.0
margin_bottom = 480.0

[node name="BossHealth" type="ProgressBar" parent="InterfaceLayer/BossHealthBar"]
margin_left = 213.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 40.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.313726, 0.0431373, 0.0431373, 1 )
custom_colors/font_color_shadow = Color( 0.486275, 0.160784, 0.160784, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 59.0
percent_visible = false

[node name="Label" type="Label" parent="InterfaceLayer/BossHealthBar"]
margin_left = 359.0
margin_top = 17.0
margin_right = 465.0
margin_bottom = 37.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "El Jefe Final"
